# VentaPasajesHaskell

./: Baruch-Haskell.cabal  CHANGELOG.md  LICENSE  README.md  venta_pasajes.db
app/: Conexion.hs  Main.hs
app/Asiento/: Actualizar.hs  Crear.hs  Eliminar.hs  Leer.hs  Menu.hs
app/Avion/: Actualizar.hs  Crear.hs  Eliminar.hs  Leer.hs  Menu.hs
app/Cliente/: Actualizar.hs  Crear.hs  Eliminar.hs  Leer.hs  Menu.hs
app/Reserva/: Actualizar.hs  Crear.hs  Eliminar.hs  Leer.hs  Menu.hs
app/Vuelo/: Actualizar.hs  Crear.hs  Eliminar.hs  Leer.hs  Menu.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
